# rmde

./: .gitignore  Cargo.toml  FEATURES.md  Makefile  README.md
.claude/logs/: session_start.json  status_line.json
RMDE/: Info.plist  project.yml
RMDE/.claude/logs/: status_line.json
RMDE/RMDE.xcodeproj/: project.pbxproj
RMDE/RMDE.xcodeproj/project.xcworkspace/xcuserdata/indrek.xcuserdatad/: UserInterfaceState.xcuserstate
RMDE/RMDE.xcodeproj/xcuserdata/indrek.xcuserdatad/xcschemes/: xcschememanagement.plist
RMDE/Sources/App/: EditorState.swift  RMDEApp.swift
RMDE/Sources/Bridge/: RMDE-Bridging-Header.h
RMDE/Sources/Views/: ContentView.swift  EditorView.swift  StatusBarView.swift  TabBarView.swift
rmde-core/: Cargo.toml  build.rs
rmde-core/src/: document.rs  editor.rs  error.rs  ffi.rs  lib.rs  selection.rs
